tests/ui/feature-gates/feature-gate-concat_bytes.stderr
error[E0658]: use of unstable library feature 'concat_bytes'
  --> $DIR/feature-gate-concat_bytes.rs:2:13
   |
LL |     let a = concat_bytes!(b'A', b"BC");
   |             ^^^^^^^^^^^^
   |
   = note: see issue #87555 <https://github.com/crablang/crablang/issues/87555> for more information
   = help: add `#![feature(concat_bytes)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
